# harness-llm-wiki

./: .gitignore  README.md  pyproject.toml
.agents/skills/: skills_entrypoints.json
configs/: router.yaml
configs/paper_sets/: classic_llm_10.yaml
docos/: __init__.py  artifact_stores.py  debug_store.py  ir_store.py  knowledge_store.py  patch_apply.py  registry.py  run_store.py  skills_mapping.py  slugify.py  source_store.py  vault_validator.py
docos/cli/: main.py
docos/harness/: __init__.py  runner.py  service.py
docos/knowledge/: extractor.py  ops.py
docos/lint/: __init__.py  checker.py  service.py
schemas/: doc.schema.json  generate_schemas.py  page.schema.json  patch.schema.json  run.schema.json
scripts/: download_and_verify_papers.py  quick_verify_papers.py
tasks/: prd-docos-next-stage-optimization.md  prd-docos-v1-alpha-optimization.md  prd-document-parsing-knowledge-os-optimization.md  requirement.md  requirements.md
tests/: test_artifact_persistence_us003.py  test_artifact_stores.py  test_auto_merge_apply_us025.py  test_blast_radius_risk_us020.py  test_compile_cli_us022.py  test_compile_concept_us010.py  test_compile_delete_us011.py  test_compile_entity_us009.py  test_compile_loop_us008.py  test_compile_operational_us032.py  test_compile_page_types_us033.py  test_compile_parser_benchmark_us033.py  test_compile_summary_us012.py  test_concept_readability_gate_us019.py  test_config.py  test_debug_store.py  test_deterministic_ids.py  test_docir.py  test_docs_alignment_us035.py  test_download_and_verify_papers.py  test_downstream_artifacts_us006.py  test_dropped_candidate_stats_us016.py  test_dual_column_detection_us011.py  test_dual_column_us015.py  test_e2e_source_fixtures_us027.py  test_empty_slug_rejection_us013.py  test_entity_readability_gate_us018.py  test_eval_real_artifacts_us023.py  test_eval_service_us019.py  test_evidence_anchor.py  test_extract_cli_us021.py  test_failed_attempt_persist.py  test_fallback_parser.py  test_fallback_rerun_us029.py  test_formula_heavy_us016.py  test_gate_patch_set_us017.py  test_gate_persist_us024.py  test_gate_rules_us025.py  test_golden_approve_us030.py  test_golden_auto_merge_us028.py  (+99 more)
(+38 files in other folders)
